shamu: enable blur support
* add blob

Change-Id: I2b59404b4709d95d97054f8af1d683d2ac3f4d53

--- a/overlay-cm/frameworks/base/core/res/res/values/config.xml
+++ b/overlay-cm/frameworks/base/core/res/res/values/config.xml
@@ -94,4 +94,7 @@
     <string-array name="config_disabledUntilUsedPreinstalledCarrierApps">
         <item>com.google.android.apps.tycho</item>
     </string-array>
+
+    <!-- Enable blur support -->
+    <bool name="config_uiBlurEnabled">true</bool>
 </resources>
