--- a/overlay-cm/frameworks/base/core/res/res/values/config.xml
+++ b/overlay-cm/frameworks/base/core/res/res/values/config.xml
@@ -97,4 +97,7 @@
 
     <!-- Enable blur support -->
     <bool name="config_uiBlurEnabled">true</bool>
+
+    <!-- Wether device has hvdcp charging support -->
+    <bool name="config_hasHvdcpCharger">true</bool>
 </resources>
